[gd_scene load_steps=23 format=2]

[ext_resource path="res://addons/admob/assets/android.png" type="Texture" id=1]
[ext_resource path="res://addons/admob/assets/poing.jpeg" type="Texture" id=2]
[ext_resource path="res://addons/admob/assets/fonts/arial.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://addons/admob/src/core/AdMobEditor.gd" type="Script" id=4]
[ext_resource path="res://addons/admob/assets/ios.png" type="Texture" id=5]
[ext_resource path="res://addons/admob/assets/icon-76.png" type="Texture" id=6]
[ext_resource path="res://addons/admob/src/core/components/ad_format/BannerAdFormat.tscn" type="PackedScene" id=7]
[ext_resource path="res://addons/admob/src/core/components/General.tscn" type="PackedScene" id=8]
[ext_resource path="res://addons/admob/src/core/components/ad_format/InterstitialAdFormat.tscn" type="PackedScene" id=9]
[ext_resource path="res://addons/admob/src/core/components/ad_format/RewardedAdFormat.tscn" type="PackedScene" id=10]
[ext_resource path="res://addons/admob/src/core/components/ad_format/RewardedInterstitialAdFormat.tscn" type="PackedScene" id=11]
[ext_resource path="res://addons/admob/src/core/components/Downloads.tscn" type="PackedScene" id=12]
[ext_resource path="res://addons/admob/src/core/components/Debug.tscn" type="PackedScene" id=13]
[ext_resource path="res://addons/admob/src/core/SupportVersion.gd" type="Script" id=14]
[ext_resource path="res://addons/admob/src/core/CurrentVersion.gd" type="Script" id=15]
[ext_resource path="res://addons/admob/src/core/VersionSupportedHTTPRequest.tscn" type="PackedScene" id=16]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.839216, 0.0352941, 0.0352941, 1 )

[sub_resource type="DynamicFont" id=2]
size = 30
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 20
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 0.772549, 0, 1 )

[sub_resource type="DynamicFont" id=6]
size = 20
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.172549, 0.568627, 0.992157, 1 )

[node name="AdMobEditor" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 4 )

[node name="TopPanel" type="Panel" parent="."]
anchor_right = 1.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 35 )
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Description" type="Label" parent="TopPanel"]
anchor_right = 1.0
margin_right = -401.4
margin_bottom = 40.0
custom_fonts/font = SubResource( 2 )
text = "AdMob Editor"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icons" type="Control" parent="TopPanel"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -395.4
margin_right = 0.600037
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AndroidButton" type="TextureButton" parent="TopPanel/Icons"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -158.6
margin_right = -118.6
margin_bottom = 40.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="iOSButton" type="TextureButton" parent="TopPanel/Icons"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -118.145
margin_right = -78.1449
margin_bottom = 40.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AdMobButton" type="TextureButton" parent="TopPanel/Icons"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -79.9999
margin_right = -39.9999
margin_bottom = 40.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PoingButton" type="TextureButton" parent="TopPanel/Icons"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -40.0
margin_bottom = 40.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MiddleScrollContainer" type="ScrollContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 40.0
margin_right = 6.10352e-05
margin_bottom = -34.9996
__meta__ = {
"_edit_lock_": true
}

[node name="TabContainer" type="TabContainer" parent="MiddleScrollContainer"]
margin_right = 600.0
margin_bottom = 949.0
size_flags_horizontal = 3
size_flags_vertical = 3
tab_align = 0

[node name="General" parent="MiddleScrollContainer/TabContainer" instance=ExtResource( 8 )]

[node name="Debug" parent="MiddleScrollContainer/TabContainer" instance=ExtResource( 13 )]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Banner" parent="MiddleScrollContainer/TabContainer" instance=ExtResource( 7 )]
visible = false
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Interstitial" parent="MiddleScrollContainer/TabContainer" instance=ExtResource( 9 )]
visible = false
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Rewarded" parent="MiddleScrollContainer/TabContainer" instance=ExtResource( 10 )]
visible = false
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="RewardedInterstitial" parent="MiddleScrollContainer/TabContainer" instance=ExtResource( 11 )]
visible = false
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Downloads" parent="MiddleScrollContainer/TabContainer" instance=ExtResource( 12 )]
visible = false
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="BottomPanel" type="Panel" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -35.0
rect_min_size = Vector2( 0, 35 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="SupportVersion" type="RichTextLabel" parent="BottomPanel"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -35.0
margin_right = -158.0
custom_fonts/normal_font = SubResource( 4 )
custom_styles/normal = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[rainbow sat=10]iOS[/rainbow][color=black]:v2.1.0[/color] [rainbow sat=10]Android[/rainbow][color=black]:v2.1.0[/color]"
text = "iOS:v2.1.0 Android:v2.1.0"
script = ExtResource( 14 )

[node name="VersionSupportedHTTPRequest" parent="BottomPanel/SupportVersion" instance=ExtResource( 16 )]

[node name="CurrentVersion" type="Label" parent="BottomPanel"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -158.0
margin_top = -35.0
rect_min_size = Vector2( 0, 35 )
custom_fonts/font = SubResource( 6 )
custom_styles/normal = SubResource( 5 )
text = "Version: 1.3.0"
align = 2
script = ExtResource( 15 )

[connection signal="pressed" from="TopPanel/Icons/AndroidButton" to="." method="_on_AndroidButton_pressed"]
[connection signal="pressed" from="TopPanel/Icons/iOSButton" to="." method="_on_iOSButton_pressed"]
[connection signal="pressed" from="TopPanel/Icons/AdMobButton" to="." method="_on_AdMobButton_pressed"]
[connection signal="pressed" from="TopPanel/Icons/PoingButton" to="." method="_on_PoingButton_pressed"]
